[gd_scene load_steps=15 format=3 uid="uid://cadcwrmayfga6"]

[ext_resource type="Script" uid="uid://boteyyu3lxnuj" path="res://Scripts/UserInterface/main_menu.gd" id="1_u6mmf"]
[ext_resource type="PackedScene" uid="uid://shfmjpab4m60" path="res://Reusables/UserInterface/fade_dark.tscn" id="2_8ulhp"]
[ext_resource type="Texture2D" uid="uid://c8kqo2m3jebe" path="res://Assets/Icons/logo_128.png" id="3_cwlqr"]
[ext_resource type="Script" uid="uid://ofxgu6wphx3a" path="res://Scripts/UserInterface/menu_doll.gd" id="4_a3yk5"]
[ext_resource type="Script" uid="uid://cn60tccjqp87q" path="res://Scripts/UserInterface/mmain_bg.gd" id="5_6npar"]
[ext_resource type="AudioStream" uid="uid://b52sr14qjpsfq" path="res://Assets/Music/Xtal.mp3" id="6_ijv8f"]
[ext_resource type="Script" uid="uid://casw3lsmn2iwt" path="res://Scripts/Audio/bg_music.gd" id="7_oh5ox"]

[sub_resource type="InputEventKey" id="InputEventKey_q8p5w"]
device = -1
keycode = 4194305

[sub_resource type="Shortcut" id="Shortcut_hg0rc"]
events = [SubResource("InputEventKey_q8p5w")]

[sub_resource type="InputEventKey" id="InputEventKey_ud1ve"]
device = -1
keycode = 4194306

[sub_resource type="Shortcut" id="Shortcut_r80mi"]
events = [SubResource("InputEventKey_ud1ve")]

[sub_resource type="InputEventKey" id="InputEventKey_vv747"]
device = -1
keycode = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_q8p5w"]
events = [SubResource("InputEventKey_vv747")]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hg0rc"]
size = Vector2(128, 128)

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_u6mmf")

[node name="Button_Manager" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 460.0
offset_top = 50.0
offset_right = 500.0
offset_bottom = 90.0

[node name="Quit" type="Button" parent="Button_Manager"]
z_index = 5
layout_mode = 0
offset_top = 284.0
offset_right = 256.0
offset_bottom = 412.0
shortcut = SubResource("Shortcut_hg0rc")
text = "Quit"

[node name="Label3" type="Label" parent="Button_Manager/Quit"]
layout_mode = 0
offset_left = 98.0
offset_top = 97.0
offset_right = 162.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.359069, 0.359069, 0.359069, 1)
text = "(escape)"

[node name="Settings" type="Button" parent="Button_Manager"]
z_index = 5
layout_mode = 0
offset_top = 141.0
offset_right = 256.0
offset_bottom = 269.0
shortcut = SubResource("Shortcut_r80mi")
text = "Settings"

[node name="Label2" type="Label" parent="Button_Manager/Settings"]
layout_mode = 0
offset_left = 106.0
offset_top = 97.0
offset_right = 161.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.359069, 0.359069, 0.359069, 1)
text = "(tab)"

[node name="Start" type="Button" parent="Button_Manager"]
z_index = 5
layout_mode = 0
offset_right = 256.0
offset_bottom = 128.0
shortcut = SubResource("Shortcut_q8p5w")
text = "Start"

[node name="Label" type="Label" parent="Button_Manager/Start"]
layout_mode = 0
offset_left = 100.0
offset_top = 97.0
offset_right = 155.0
offset_bottom = 120.0
theme_override_colors/font_color = Color(0.359069, 0.359069, 0.359069, 1)
text = "(space)"

[node name="fade_dark" parent="." instance=ExtResource("2_8ulhp")]
visible = false
z_index = 100
offset_left = -74.0
offset_top = -74.0
offset_right = 694.0
offset_bottom = 358.0
scale = Vector2(2, 2)

[node name="Fadetimer" type="Timer" parent="fade_dark"]
wait_time = 0.5

[node name="Blogo" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
show_behind_parent = true
z_index = -1
position = Vector2(576, 324)
scale = Vector2(0.5, 0.5)
texture = ExtResource("3_cwlqr")
script = ExtResource("4_a3yk5")
base_move_speed = 250.0
rainbow_speed = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blogo"]
shape = SubResource("RectangleShape2D_hg0rc")

[node name="Blogo2" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
show_behind_parent = true
z_index = -1
position = Vector2(155, 244)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_cwlqr")
script = ExtResource("4_a3yk5")
base_move_speed = 250.0
rainbow_speed = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blogo2"]
shape = SubResource("RectangleShape2D_hg0rc")

[node name="Blogo3" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.490196)
show_behind_parent = true
z_index = -1
position = Vector2(742, 561)
texture = ExtResource("3_cwlqr")
script = ExtResource("4_a3yk5")
base_move_speed = 250.0
rainbow_speed = 5.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Blogo3"]
shape = SubResource("RectangleShape2D_hg0rc")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="ColorRect" type="ColorRect" parent="." node_paths=PackedStringArray("audio_player")]
clip_children = 2
light_mask = 0
z_index = -110
z_as_relative = false
offset_left = -167.0
offset_top = -285.0
offset_right = -127.0
offset_bottom = -245.0
scale = Vector2(37.32, 30.44)
color = Color(0.787283, 0.347059, 0.655953, 1)
script = ExtResource("5_6npar")
audio_player = NodePath("../AudioStreamPlayer2D")
base_color = Color(0.240038, 0.268658, 0.569189, 1)
pulse_color = Color(0.299083, 0.401967, 0.737838, 1)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ijv8f")
volume_db = 1.0
pitch_scale = 1.05
autoplay = true
bus = &"Music"
parameters/looping = true
script = ExtResource("7_oh5ox")

[connection signal="pressed" from="Button_Manager/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Button_Manager/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Button_Manager/Start" to="." method="_on_start_pressed"]
[connection signal="timeout" from="fade_dark/Fadetimer" to="." method="_on_fade_timer_timeout"]
